2010-05-25	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/node.pm: Fixed a bug introduced with new node categories in
	node_view_with_fingerprint.
	
2010-05-18	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/node.pm: Fixed a regression I introduced in revno 
	a7c168dcd6e42180e15dc166feb7167ddc36bc8f in node_modify (pfcmd node 
	edit). Now fixed so its properly updating nodes again.

	* pf/packetfence.spec: A file (conf/floating_network_device.conf) was 
	left out of the RPM spec for Floating Network Device support. This has 
	been fixed.

	* pf/bin/pfcmd: Changed other soft-referenced function calls that were
	failing with the updated Parse::RecDescent module.

	* pf/bin/pfcmd: Replaced all hard-coded line numbers with __LINE__ perl
	construct since web admin uses a regexp on "line xxx" to be aware about
	errors (as a hack).

	* pf/bin/pfcmd: Since yesterday's fix, pfcmd commands need a true 
	return value otherwise pfcmd would report that sub didn't exist. I 
	fixed that.

2010-05-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/pfcmd: Changed the way we dynamically call pfcmd commands that
	we parsed. Something changed with upstream Parse::RecDescent that 
	cause "Can't coerce GLOB to string" fatal errors under hard to 
	reproduce circumstances. The change should fix them for good. Fixes 
	#833;
	http://www.packetfence.org/bugs/view.php?id=833

2010-05-14	Regis Balzard <rbalzard@inverse.ca>
	* pf/bin/pfcmd, pf/conf/floating_network_device.conf, pf/conf/ui.conf,
	pf/html/admin/common.php, 
	pf/html/admin/configuration/floatingnetworkdevice_add.php,
	pf/html/admin/configuration/floatingnetworkdevice_edit.php,
	pf/html/admin/configuration/floatingnetworkdevice.php,
	pf/html/admin/header.php, pf/lib/pf/config.pm, pf/lib/pf/floatingdevice,
	pf/lib/pf/floatingdevice/custom.pm, pf/lib/pf/floatingdevice.pm,
	pf/lib/pf/pfcmd/help.pm, pf/lib/pf/pfcmd/pfcmd.pm, pf/lib/pf/pfcmd.pm,
	pf/lib/pf/SNMP/Cisco/Catalyst_2950.pm, 